<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface_dark"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/camera_url_label"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/cameraUrlInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/camera_url"
                android:inputType="textUri"
                android:textColor="@color/white"
                android:textColorHint="#88FFFFFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/servo_ip_label"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/servoIpInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/servo_ip"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="#88FFFFFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/servo_port_label"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/servoPortInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/servo_port"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="#88FFFFFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/endpoint_label"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/endpointInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/endpoint"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="#88FFFFFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/horizontal_sensitivity_label"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/hSensitivityInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/horizontal_sensitivity"
                android:inputType="numberDecimal|numberSigned"
                android:textColor="@color/white"
                android:textColorHint="#88FFFFFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/vertical_sensitivity_label"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/vSensitivityInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vertical_sensitivity"
                android:inputType="numberDecimal|numberSigned"
                android:textColor="@color/white"
                android:textColorHint="#88FFFFFF" />

            <Switch
                android:id="@+id/invertHorizontalSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/invert_horizontal"
                android:textColor="@color/white" />

            <Switch
                android:id="@+id/invertVerticalSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invert_vertical"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/pan_min_label"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/panMinInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pan_min"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="#88FFFFFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/pan_max_label"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/panMaxInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pan_max"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="#88FFFFFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tilt_min_label"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tiltMinInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tilt_min"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="#88FFFFFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tilt_max_label"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tiltMaxInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tilt_max"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="#88FFFFFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/pan_center_label"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/panCenterInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pan_center"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="#88FFFFFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tilt_center_label"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tiltCenterInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tilt_center"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="#88FFFFFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/send_interval_label"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/sendIntervalInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/send_interval"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="#88FFFFFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/dead_zone_label"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/deadZoneInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dead_zone"
                android:inputType="numberDecimal|numberSigned"
                android:textColor="@color/white"
                android:textColorHint="#88FFFFFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/smoothing_label"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/smoothingInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/smoothing"
                android:inputType="numberDecimal|numberSigned"
                android:textColor="@color/white"
                android:textColorHint="#88FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/testCameraButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/test_camera" />

                <Button
                    android:id="@+id/testServoButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/test_servos" />
            </LinearLayout>

            <Button
                android:id="@+id/restoreDefaultsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/restore_defaults" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1E1E1E"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>
